<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDwa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextWartosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/viewWynik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewWynik"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_oblicz_euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obliczEuro" />

        <Button
            android:id="@+id/button_oblicz_dolary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obliczDolary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>